Fixed incorrect css overflow

--- a/client/style/MessagesView.scss
+++ b/client/style/MessagesView.scss
@@ -45,7 +45,7 @@
 
                 $previewWidth: 80px;
 
-                overflow: auto;
+                overflow: hidden;
                 background-color: $colorLight4;
                 border-radius: 3px;
                 box-shadow: $shadow1;
